# tesla-wall-connector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: example.py  simple_example.py
tesla_wall_connector/: __init__.py  api.py  exceptions.py  lifetime.py  version.py  vitals.py  wall_connector.py  wifi_status.py
tests/: test_wall_connector.py
