[tool.poetry]
name = "tesla-wall-connector"
version = "0.2.0"
license = "MIT"
description = "API Library for communicating with a Tesla Wall Connector"
authors = ["Einar Bragi Hauksson <einar.hauksson@gmail.com>"]
readme = "README.md"
repository = "https://github.com/einarhauks/tesla-wall-connector"
keywords = ["tesla", "wall connector"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
pytest = "^6.2.5"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.4"
pytest-asyncio = "^0.15.1"
black = "^21.9b0"
pre-commit = "^2.15.0"
bandit = "^1.7.0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
pyupgrade = "^2.29.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
