[project]
name = "tesla-wall-connector"
version = "1.1.0"
description = "API Library for communicating with a Tesla Wall Connector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Einar Bragi Hauksson", email = "einar.hauksson@gmail.com" }]
keywords = ["tesla", "wall connector"]
dependencies = [
  "aiohttp>=3.14,<4",
  "async-timeout>=4.0.3,<5",
  "backoff>=1.11,<2",
]

[project.urls]
Repository = "https://github.com/einarhauks/tesla-wall-connector"

[dependency-groups]
dev = [
  "pytest>=9.1,<10",
  "aresponses>=3.0.0,<4",
  "pytest-asyncio>=1.4,<2",
  "pyright>=1.1,<2",
  "pre-commit>=4.0,<5",
  "bandit>=1.7,<2",
  "codespell>=2.1,<3",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["tesla_wall_connector", "tests", "examples"]
exclude = [".venv"]
reportMissingTypeStubs = false
